cleaning up code

--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
                         <input type="radio" name="readStatus" id="unread" value="unread" checked>
                         <label for="unread">unread</label><br>
                         <input type="radio" name="readStatus" id="currently_reading" value="currently">
-                        <label for="currently_reading">currently reading</label><br>
+                        <label for="currently_reading">in progress</label><br>
                         <input type="radio" name="readStatus" id="finished_reading" value="finished">
-                        <label for="finished_reading">finished reading</label><br>
+                        <label for="finished_reading">finished</label><br>
                     </div>
                 </div>
             </fieldset>
@@ -67,59 +67,9 @@
 
 </div>
 <div id="content-container">
-    <!-- <div class="library-row">
-        <div data-book="1" class="book-container">
-            <img data-book="1" src="./spotlight3.png" alt="">
-            <div class="book">
-                <div class="book-content-container">
-                    <button class="delete-book-btn"></button>
-                    <div class="book-content title"><h3>Long title that is really long</h3></div>
-                    <h4 class="book-content author">By<br> Michael Porter</h4>
-                    
-                    <div class="book-content status">
-                        <h4 class="book-content pages">545 pages</h4>
-                        <div data-book="1" class="book-content status-button">
-                            <div data-book="1" data-readstatus="unread" class="book-content status-color"></div>
-                        </div>
-                        <div data-book="1" class="status-dropdown hidden">
-                            <div data-book="1" class="status-dropdown-item">unread<div data-readstatus="unread" class="book-content status-color status-unread"></div></div>
-                            <div data-book="1" class="status-dropdown-item">in progress<div data-readstatus="currently" class="book-content status-color status-currently"></div></div>
-                            <div data-book="1" class="status-dropdown-item">finished<div data-readstatus="finished" class="book-content status-color status-finished"></div></div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <div class="book-container">
-            <div class="book">
-                <div class="book-content-container">
-                    <div class="delete-book-btn"></div>
-                    <div class="book-content title"><h3>Short title</h3></div>
-                    <h4 class="book-content author">By Long name with gjuye</h4>
-                    <h4 class="book-content pages">245 pages</h4>
-                    <h4 class="book-content status">Status: unread</h4>
-                </div>
-            </div>
-        </div>
-
-        <div class="book-container">
-            <div class="book">
-                <div class="book-content-container">
-                    <div class="delete-book-btn"></div>
-                    <div class="book-content title"><h3>Very very long title with cannot display Long title that is really long</h3></div>
-                    <h4 class="book-content author">superman long Michael Porter</h4>
-                    <h4 class="book-content pages">245 pages</h4>
-                    <h4 class="book-content status">Status: unread</h4>
-                </div>
-            </div>
-        </div>
-    </div> -->
+<!-- Rows and books go here -->
     <div id="library-row"></div>
 </div>
-<!-- <div id="bottom-container">
-
-</div> -->
 
 </body>
 </html>
