books per row change on screenwidth

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div id="books-per-row-container">
         <div id="bpr-top-row">
             <h4>Books per row: </h4>
-            <div id="books-per-row-spinbox">3</div>
+            <div id="books-per-row-spinbox"></div>
             <div id="spinbox-controls-container">
                 <button type="button" id="spinbox-increase" class="spinbox-controls">&#9650;</button>
                 <button type="button" id="spinbox-decrease" class="spinbox-controls">&#9660;</button>
